--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "2.11.2",
     "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-concat": "2.6.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-csso": "^2.0.0",
@@ -17,8 +18,10 @@
     "gulp-jade": "1.1.0",
     "gulp-load-plugins": "1.2.0",
     "gulp-notify": "2.2.0",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "2.2.0",
     "gulp-sourcemaps": "1.6.0",
+    "gulp-svg-sprite": "^1.3.1",
     "rimraf": "2.5.2"
   },
   "dependencies": {
