--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "2.2.0",
     "gulp-sourcemaps": "1.6.0",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svgmin": "^1.2.2",
     "rimraf": "2.5.2"
   },
   "dependencies": {
